test/functions/iterators/Issue21265.1.good
Issue21265.chpl:6: error: iterators that have zero 'yield' statements must declare their return type
